==> sonysunny0007/stm32-freertos/Projects/stm32_led_architecture_freeRTOS/src/led_driver.c <==
//interact directly with hardware
#include "led_driver.h"
#include "main.h"

void LedDriver_Init(void){
    __HAL_RCC_GPIOA_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStruct = {0};
    GPIO_InitStruct.Pin = GPIO_PIN_6;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;

    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
}

void LedDriver_On(void)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_6, GPIO_PIN_RESET);
}

void LedDriver_Off(void)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_6, GPIO_PIN_SET);
}

void LedDriver_Toggle(void)
{
    HAL_GPIO_TogglePin(GPIOA, GPIO_PIN_6);
}
